Hacks and stuff
