# app/Models/Product.php
@@ -1,49 +1,0 @@
-<?php
-
-namespace App\Models;
-use OpenApi\Annotations as OA;
-
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
-
-/**
- * @OA\Schema(
- *     schema="Product",
- *     type="object",
- *     title="Product",
- *     description="Product model",
- *     @OA\Property(
- *         property="id",
- *         type="integer",
- *         description="Product ID"
- *     ),
- *     @OA\Property(
- *         property="name",
- *         type="string",
- *         description="Product name"
- *     ),
- *     @OA\Property(
- *         property="details",
- *         type="string",
- *         description="Product details"
- *     ),
- *     @OA\Property(
- *         property="created_at",
- *         type="string",
- *         format="date-time",
- *         description="Creation timestamp"
- *     ),
- *     @OA\Property(
- *         property="updated_at",
- *         type="string",
- *         format="date-time",
- *         description="Update timestamp"
- *     )
- * )
- */
-
-class Product extends Model
-{
-    use HasFactory;
-    protected $fillable = ['id', 'name', 'details'];
-}
